--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo systemctl start mysql.service
-        mysqladmin -u root -proot create ${WP_TESTS_DB_NAME}
+        mysqladmin -u root -proot create $WP_TESTS_DB_NAME
         composer install --prefer-dist
         composer require --dev --update-with-dependencies --prefer-dist roots/wordpress="${{ matrix.wp }} || *" wp-phpunit/wp-phpunit="${{ matrix.wp }} || *"
     - name: Run unit tests
